--- a/html/site-upgrade.html
+++ b/html/site-upgrade.html
@@ -119,84 +119,30 @@
         <!-- ============================================================== -->
         <div id="page-wrapper">
             <div class="container-fluid">
-                <div class="row bg-title">
-                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12">
-                        <h4 class="page-title">Account</h4>
+                <div class="col-md-4">
+                    <div class="service-box mt-5">
+                        <div class="y-box">
+                            <div class="circle">
+                                <div class="icon"><img src="https://placehold.it/80"  class="img-circle" alt="hosting"></div>
+                            </div>
+                        </div>
+                        <div class="service-info">
+                            <h2>E-commerce Silver</h2>
+                            <p>Frais d installation gratuit.<br> Commerce electronique.<br> Importation Excel.<br> Panier utilisateur.<br>
+                                Facture client.<br> Tracage par ip visiteur.<br> Stockage illimite.<br> Sous-domains Illimité.<br>
+                                Bande passante illimitee</p>
+                            <div class="service-price">A partir de <strong>€149/mo </strong></div>
+                            <p><strong>Prix pour 3 mois</strong></p>
+                            <div class="lm-btn"><a onclick="addBasket(9)" class="btn btn-primary btn-lg">Buy</a></div>
+                        </div>
                     </div>
-                    <div class="col-lg-9 col-sm-8 col-md-8 col-xs-12">
+                </div>
+                <div class="col-md-4">
 
-                        <ol class="breadcrumb">
-                            <li><a href="#">Dashboard</a></li>
-                            <li class="active">Account</li>
-                        </ol>
-                    </div>
                 </div>
-                <!-- /.row -->
-                <!-- .row -->
-                <div class="row">
-                    <div class="col-md-4 col-xs-12">
-                        <div class="white-box">
-                            <div class="user-bg"> <img width="100%" alt="user" src="../plugins/images/large/img1.jpg">
-                                <div class="overlay-box">
-                                    <div class="user-content">
-                                        <a href="javascript:void(0)"><img src="../plugins/images/users/genu.jpg" class="thumb-lg img-circle"
-                                                alt="img"></a>
-                                        <h4 class="text-white">Current Plan</h4>
-                                        <h5 class="text-white">Basic</h5>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="user-btm-box">
-                                <div class="col-md-4 col-sm-4 text-center">
-                                    <p class="text-purple"><i class="ti-facebook"></i></p>
-                                    <h1>258</h1>
-                                </div>
-                                <div class="col-md-4 col-sm-4 text-center">
-                                    <p class="text-blue"><i class="ti-twitter"></i></p>
-                                    <h1>125</h1>
-                                </div>
-                                <div class="col-md-4 col-sm-4 text-center">
-                                    <p class="text-danger"><i class="ti-dribbble"></i></p>
-                                    <h1>556</h1>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-8 col-xs-12">
-                        <div class="white-box">
-                            <form class="form-horizontal form-material">
-                                <div class="form-group">
-                                    <label class="col-md-12">Membership</label>
-                                    <div class="col-md-12">
-                                        <input type="text" placeholder="Johnathan Doe" class="form-control form-control-line">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="example-email" class="col-md-12">Expiration Date</label>
-                                    <div class="col-md-12">
-                                        <input type="email" placeholder="30/10/2019" class="form-control form-control-line"
-                                            name="example-email" id="example-email"> </div>
-                                </div>
-                                
-                                <div class="form-group">
-                                    <label class="col-sm-12">Country</label>
-                                    <div class="col-sm-12">
-                                        <select class="form-control form-control-line">
-                                            <option>London</option>
-                                            
-                                        </select>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="col-sm-12">
-                                        <button class="btn btn-danger">Upgrade to Pro</button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
+                <div class="col-md-4">
+
                 </div>
-                <!-- /.row -->
             </div>
             <!-- /.container-fluid -->
             <footer class="footer text-center">ICHBOOST </footer>
