--- a/html/site-upgrade.html
+++ b/html/site-upgrade.html
@@ -138,10 +138,40 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-
+                    <div class="service-box mt-5">
+                        <div class="y-box">
+                            <div class="circle">
+                                <div class="icon"><img src="https://placehold.it/80" class="img-circle" alt="hosting"></div>
+                            </div>
+                        </div>
+                        <div class="service-info">
+                            <h2>E-commerce Silver</h2>
+                            <p>Frais d installation gratuit.<br> Commerce electronique.<br> Importation Excel.<br> Panier utilisateur.<br>
+                                Facture client.<br> Tracage par ip visiteur.<br> Stockage illimite.<br> Sous-domains Illimité.<br>
+                                Bande passante illimitee</p>
+                            <div class="service-price">A partir de <strong>€149/mo </strong></div>
+                            <p><strong>Prix pour 3 mois</strong></p>
+                            <div class="lm-btn"><a onclick="addBasket(9)" class="btn btn-primary btn-lg">Buy</a></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4">
-
+                    <div class="service-box mt-5">
+                        <div class="y-box">
+                            <div class="circle">
+                                <div class="icon"><img src="https://placehold.it/80" class="img-circle" alt="hosting"></div>
+                            </div>
+                        </div>
+                        <div class="service-info">
+                            <h2>E-commerce Silver</h2>
+                            <p>Frais d installation gratuit.<br> Commerce electronique.<br> Importation Excel.<br> Panier utilisateur.<br>
+                                Facture client.<br> Tracage par ip visiteur.<br> Stockage illimite.<br> Sous-domains Illimité.<br>
+                                Bande passante illimitee</p>
+                            <div class="service-price">A partir de <strong>€149/mo </strong></div>
+                            <p><strong>Prix pour 3 mois</strong></p>
+                            <div class="lm-btn"><a onclick="addBasket(9)" class="btn btn-primary btn-lg">Buy</a></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <!-- /.container-fluid -->
